xdgshellwindow: never request clients to resize to a negative size

Doing that can cause clients to crash

BUG: 489983